Added some functions (delete timer + sound change)
Added some functions (delete timer + sound change (between tuturu and ayaya) )

--- a/Lab2/mainwindow.ui
+++ b/Lab2/mainwindow.ui
@@ -118,6 +118,39 @@
      <string>Fastest timer №0</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>240</y>
+      <width>69</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>AYAYA</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>tuturu</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>240</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sound:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
